@@ -1,3 +1,4 @@
+0.8.0-0 @08/01/2002 15:10:00 GMT@
 0.7.0-2 @08/01/2002 05:01:49 GMT@
 0.7.0-1 @07/31/2002 05:01:41 GMT@
 0.7.0-0 @07/30/2002 22:10:00 GMT@
