@@ -1,5 +1,9 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2002-08-02 patrickh    Refactored the tweek::SubjectManager interface and the
+                       C++ implementation to allow users to add customized
+                       identifying elements to their Subject Manager instance.
+                       NEW VERSION: 0.8.0
 2002-08-01 patrickh    Enabled compiling of profiled libraries.
 2002-07-14 patrickh    Extended org.vrjuggler.tweek.beans.FileLoader to include
                        a method for indicating that the user wants to save an
